# rflect

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  compile_commands.json  conanfile.py  conanfile.txt  main.cpp
.github/workflows/: coverage.yml  tests.yml
benchmark/: CMakeLists.txt  plot_results.py
benchmark/fluid_simulator/: CMakeLists.txt  common.hpp  main.cpp  plot_results.py
benchmark/fluid_simulator/sim/common/math/: concepts.hpp  scalar.hpp
benchmark/fluid_simulator/sim/common/utils/: constants.hpp  primitive_types.hpp
benchmark/fluid_simulator/sim/non-reflected/aos/: block.cpp  grid.hpp
benchmark/fluid_simulator/sim/non-reflected/soa/: block.cpp  fld.hpp  grid.hpp  particle.hpp
benchmark/fluid_simulator/sim/reflected/: CMakeLists.txt
benchmark/fluid_simulator/sim/reflected/aos-soa/: block.cpp  block.hpp  fld.hpp  grid.hpp  particle.hpp
benchmark/imaginary_numbers/: CMakeLists.txt  imaginary_numbers.cpp  plot_results.py
benchmark/rflect3d/: CMakeLists.txt  rflect3d.cpp  scene.hpp
benchmarks/fluid_simulator/: CMakeLists.txt  common.hpp  test_correctness.cpp
benchmarks/fluid_simulator/sim/common/args/: proargs.hpp
benchmarks/fluid_simulator/sim/common/utils/: error.hpp
benchmarks/fluid_simulator/sim/reflected/aos-soa/: block.hpp  fld.hpp
common/: math.hpp  math_detail.hpp  primitive_types.hpp  reflection_utils.hpp
conan/: ConanPresets.json  conan_install.sh  conanfile.py  install.sh  linux_profile  linux_profile_host
conan/config/: global.conf  remotes.json  settings.yml
conan/config/profiles/: gcc-16
non-reflected/: CMakeLists.txt
non-reflected/soa/: main.cpp
src/: CMakeLists.txt  main.cpp  simulator.cpp  simulator.hpp
src/common/args/: proargs.cpp  proargs.hpp
src/common/file/: fld.cpp  fld.hpp
src/common/math/: concepts.hpp  functions.hpp  math.hpp  matrix.hpp  operators.hpp  scalar.hpp  utils.hpp  vector.hpp
src/common/utils/: constants.hpp  error.hpp
src/include/rflect/: concepts.hpp  containers.hpp  converters.hpp  introspection.hpp  rflect.hpp  serialization.hpp
src/include/rflect/concepts/: converter_closure.hpp  enum_concepts.hpp  layout_concepts.hpp  proxy_concepts.hpp  struct_of_ranges.hpp
src/include/rflect/containers/: comparison.hpp  dual_array.hpp  dual_vector.hpp  iterator.hpp  memory_layout.hpp  multi_array.hpp  multi_vector.hpp  proxy.hpp  type_array.hpp
src/include/rflect/converters/: soa_to_zip.hpp  struct_to_soa.hpp  struct_to_tuple.hpp  to_static.hpp
src/include/rflect/introspection/: enum.hpp  for_each.hpp  struct.hpp
src/include/rflect/serialization/: print_enum.hpp  print_struct.hpp
src/include/rflect/utility/: member_accessors.hpp  static_array.hpp
src/non-reflected/: CMakeLists.txt  non-reflected.cmake
src/non-reflected/aos/: block.cpp  block.hpp  grid.cpp  grid.hpp  particle.cpp  particle.hpp
src/non-reflected/soa/: block.cpp  block.hpp  grid.cpp  grid.hpp  particle.hpp
src/reflected/: CMakeLists.txt  reflected.cmake
src/reflected/aos-soa/: block.cpp  block.hpp  grid.cpp  grid.hpp  particle.hpp
src/reflected/reflection/: concepts.hpp  dual_vector.hpp  dual_vector_detail.hpp  iterator.hpp  memory_layout.hpp  proxy_class.hpp  utils.hpp
tests/: CMakeLists.txt
tests/ftest/: main.cpp
tests/runtime/: CMakeLists.txt  test_containers.hpp  test_dual_array.cpp  test_dual_vector.cpp  test_enum.cpp  test_multi_array.cpp  test_multi_vector.cpp  test_proxy.cpp  utility.hpp
tests/static/: CMakeLists.txt  test_proxy.cpp  test_soa_to_zip.cpp  test_struct_to_soa.cpp  test_type_list.cpp  test_vector_concepts.cpp  utility.hpp
tests/utest/: math.cpp  test_block.cpp  test_grid.cpp
tests/utest/runtime/: test_dual_vector.cpp
tests/utest/static/: reflection_utilities.cpp
